--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
-        "amethyst/core": "0.2.*"
+        "amethyst/core": "0.2.*",
+        "amethyst/action": "0.2.*",
+        "amethyst/data-view": "0.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
